tests/reflection_base_non_alias_bad.stderr
tests/reflection_base_non_alias_bad.hop:3:2: error: HOP2108: base() requires an alias type
